WIP: adds basic wireframe

--- a/index.html
+++ b/index.html
@@ -9,5 +9,27 @@
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
 		<script defer src="js/script.js"></script>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<h1>Drink of Choice</h1>
+			<section id="description">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nihil numquam, facere nostrum sequi iste
+				voluptatibus adipisci molestiae dicta, quos, expedita debitis cupiditate repellendus tempora esse! Neque debitis
+				asperiores deserunt.
+			</section>
+		</header>
+		<main>
+			<section id="first">
+				<form>
+					<input id="search" type="text" placeholder="Ingredients - Alcohol, Mixer, or Garnish" />
+					<input id="button" type="submit" value="Let's Get Drinks!" />
+				</form>
+			</section>
+			<section>
+				Cocktail list and instructions will go here
+				<div id="list"></div>
+				<div id="instructions"></div>
+			</section>
+		</main>
+	</body>
 </html>
