WIP: updates basic wireframe

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<br />
 			<section>
 				Cocktail list and instructions will go here
-				<div id="list"></div>
-				<div id="instructions"></div>
+				<div id="list">TEST</div>
+				<div id="instructions">TEST</div>
 			</section>
 		</main>
 	</body>
