--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Drink of Choice - What're We Sipping On Tonight?</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
 		<script defer src="js/script.js"></script>
@@ -15,7 +15,9 @@
 			<section id="description">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque nihil numquam, facere nostrum sequi iste
 				voluptatibus adipisci molestiae dicta, quos, expedita debitis cupiditate repellendus tempora esse! Neque debitis
-				asperiores deserunt.
+				asperiores deserunt. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos temporibus, corporis
+				iste vero ad perferendis et laborum. Soluta voluptate, alias, aperiam porro vel error quidem ut quasi sapiente,
+				enim veniam.
 			</section>
 		</header>
 		<main>
