WIP: successful ajax calls

--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@
 			<br />
 			<section>
 				Cocktail list and instructions will go here
-				<div id="list">TEST</div>
-				<div id="instructions">TEST</div>
+				<br />
+				<div id="list"></div>
+				<br />
+				<div id="instructions">
+					<div id="parts"></div>
+					<!-- ADD NOTE ABOUT 1cl = 10ml -->
+				</div>
 			</section>
 		</main>
 	</body>
