WIP: working css, js

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 		</header>
 		<div class="first">
 			We've all been there: you're finally back home, or maybe you're hosting some friends. Your bar cart is full with your
-			tried and true's sitting front and center. Yet, you're craving something <em>new</em>. Or maybe you've decided
+			tried and trues sitting front and center. Yet, you're craving something <em>new</em>. Or maybe you've decided
 			to try your hand at being a mixologist? Either way, you don't know what to make! That's where
 			<strong>Drink of Choice</strong> comes in - throw in an ingredient (or two, or three) that you'd like in your
-			drink, and we'll give you up to 10 cocktails you can make. It's almost as easy as hitting the Staples<sup>&reg;</sup> button.
+			drink, and we'll give you up to 10 cocktails you can make. It's almost as easy as hitting the Staples<sup>&reg;</sup> button. Cheers!
 			<div id="field">
 				<p>
 				<form>
-					<input id="search" type="text" placeholder="Ingredients - Alcohol, Mixer, or Garnish" />
+					<input id="search" type="text" placeholder="Ingredients - gin, tonic, lime" />
 					<input id="button" type="submit" value="Let's Get Drinks!" />
 				</form>
 				</p>
@@ -33,9 +33,11 @@
 		</div>
 		<div class="second">
 			<div id="list"></div>
+			<div id="directions">
+			<div id="parts"></div>
 			<div id="instructions">
-				<div id="parts"></div>
 				<!-- ADD NOTE ABOUT 1cl = 10ml -->
+			</div>
 			</div>
 		</div>
 		<footer>Copyright &copy; All Rights Reserved 2022 Drink of Choice. Background Image by Freepik.</footer>
