--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1>Drink of Choice</h1>
 		</header>
 		<div class="first">
-			We've all been there: you're finally back home, or maybe you're hosting some friends. Your bar cart is full with your
+			We've all been there: you're finally back home, or maybe you're hosting some friends. Your bar cart is full, with your
 			tried and trues sitting front and center. Yet, you're craving something <em>new</em>. Or maybe you've decided
 			to try your hand at being a mixologist? Either way, you don't know what to make! That's where
 			<strong>Drink of Choice</strong> comes in - throw in an ingredient (or two, or three) that you'd like in your
