WIP: fixes slight grammar errors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</header>
 		<div class="first">
 			We've all been there: you're finally back home, or maybe you're hosting some friends. Your bar cart is full, with your
-			tried and trues sitting front and center. Yet, you're craving something <em>new</em>. Or maybe you've decided
+			tried and true favorites sitting front and center. Yet, you're craving something <em>new</em>. Or maybe you've decided
 			to try your hand at being a mixologist? Either way, you don't know what to make! That's where
 			<strong>Drink of Choice</strong> comes in - throw in an ingredient (or two, or three) that you'd like in your
 			drink, and we'll give you up to 10 cocktails you can make. It's almost as easy as hitting the Staples<sup>&reg;</sup> button. Cheers!
