final updates - adds error messages

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<input id="button" type="submit" value="Let's Get Drinks!" />
 				</form>
 				</p>
+				<span>Note: 1cl = 10ml</span>
 			</div>
 		</div>
 		<div class="second">
